docs: update index.html file with new information

--- a/index.html
+++ b/index.html
@@ -75,20 +75,22 @@
     <section class="section" id="code">
       <h2 class="section-title">Code example:</h2>
       <code>
-            &lt;<span>section class="section" id="personal_qualities"</span>&gt; &lt;<span>h2 class="section-title">Personal qualities: &lt;<span>/h2</span>&gt;
-              <p>&lt;<span>ul</span>&gt;</p>
-              <p>&lt;<span>li</span>&gt;readiness for constant self&lt;<span>/li</span>&gt;</p>
-              <p>&lt;<span>li</span>&gt;development&lt;<span>/li</span>&gt;</p>
-              <p>&lt;<span>li</span>&gt;ability to learn quickly&lt;<span>/li</span>&gt;</p>
-              <p>&lt;<span>li</span>&gt;attentiveness&lt;<span>/li</span>&gt;</p>
-              <p>&lt;<span>li</span>&gt;activity&lt;<span>/li</span>&gt;</p>
-              <p>&lt;<span>li</span>&gt;purposefulness&lt;<span>/li</span>&gt;</p>
-              <p>&lt;<span>li</span>&gt;independence&lt;<span>/li</span>&gt;</p>
-              <p>&lt;<span>li</span>&gt;logical thinking&lt;<span>/li</span>&gt;</p>
-              <p>&lt;<span>li</span>&gt;sociability&lt;<span>/li</span>&gt;</p>
-              <p>&lt;<span>/ul</span>&gt;</p>
-              <p>&lt;<span>/section</span>&gt;</p>
-          </code>
+            <pre>
+              <section class="section" id="personal_qualities"><h2 class="section-title">Personal qualities:</h2>
+              <ul>
+              <li>readiness for constant self</li>
+               <li>development</li>
+                <li>ability to learn quickly</li>
+                  <li>attentiveness</li>
+                    <li>activity</li>
+                      <li>purposefulness</li>
+                        <li>independence</li>
+                          <li>logical thinking</li>
+                            <li>sociability</li>
+                            </ul>
+                          </section>
+            </pre>
+      </code>
     </section>
     <section class="section" id="projects">
       <h2 class="section-title">Projects:</h2>
@@ -125,7 +127,6 @@
       <a href="https://github.com/TV1GGER/" class="git_link">My GitHub account</a>
     </div>
   </footer>
-  </main>
-</body>
+ </body>
 
 </html>
