docs: update index.html file with new information

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -74,9 +74,9 @@
     </section>
     <section class="section" id="code">
       <h2 class="section-title">Code example:</h2>
+      <pre>
       <code>
-            <pre>
-              <section class="section" id="personal_qualities"><h2 class="section-title">Personal qualities:</h2>
+            <section class="section" id="personal_qualities"><h2 class="section-title">Personal qualities:</h2>
               <ul>
               <li>readiness for constant self</li>
                <li>development</li>
@@ -89,8 +89,8 @@
                             <li>sociability</li>
                             </ul>
                           </section>
-            </pre>
-      </code>
+            </code>
+          </pre>
     </section>
     <section class="section" id="projects">
       <h2 class="section-title">Projects:</h2>
@@ -120,6 +120,7 @@
       <p>My level of English (according to EPAM Training Center tests) - B2</p>
     </section>
   </div>
+</main>
   <footer>
     <div class="footer">
       <p class="footer_text">&COPY;2022 by Dzianis Perahudau</p>
