docs: update index.html file with new information

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       </ul>
     </nav>
   </div>
-  <div class="sidebar">
-    <main>
+  <main>
+    <div class="sidebar"></div>
       <img src="./assets/img/My_photo.jpg" class="my_photo" alt="My photo">
       <h1>Dzianis Perahudau</h1>
       <section id="contacts">
@@ -39,7 +39,7 @@
           <li>GitHub: tv1gger</li>
         </ul>
       </section>
-  </div>
+    </div>
   <div class="content">
     <section class="section" id="about_me">
       <h2 class="section-title">About me:</h2>
@@ -120,7 +120,7 @@
       <p>My level of English (according to EPAM Training Center tests) - B2</p>
     </section>
   </div>
-</main>
+ </main>
   <footer>
     <div class="footer">
       <p class="footer_text">&COPY;2022 by Dzianis Perahudau</p>
