docs: update index.html file with new information

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
   </div>
   <main>
-    <div class="sidebar"></div>
+    <div class="sidebar">
       <img src="./assets/img/My_photo.jpg" class="my_photo" alt="My photo">
       <h1>Dzianis Perahudau</h1>
       <section id="contacts">
@@ -76,19 +76,19 @@
       <h2 class="section-title">Code example:</h2>
       <pre>
       <code>
-            <section class="section" id="personal_qualities"><h2 class="section-title">Personal qualities:</h2>
-              <ul>
-              <li>readiness for constant self</li>
-               <li>development</li>
-                <li>ability to learn quickly</li>
-                  <li>attentiveness</li>
-                    <li>activity</li>
-                      <li>purposefulness</li>
-                        <li>independence</li>
-                          <li>logical thinking</li>
-                            <li>sociability</li>
-                            </ul>
-                          </section>
+        &lt;<span>section class="section" id="personal_qualities"</span>&gt;&lt;<span>h2 class="section-title">Personal qualities:&lt;<span>/h2</span>&gt;
+          &lt;<span>ul</span>&gt;
+            &lt;<span>li>readiness for constant self&lt;<span>/li</span>&gt;
+              &lt;<span>li>development&lt;<span>/li</span>&gt;
+                &lt;<span>li>ability to learn quickly&lt;<span>/li</span>&gt;
+                  &lt;<span>li>attentiveness&lt;<span>/li</span>&gt;
+                    &lt;<span>li>activity&lt;<span>/li</span>&gt;
+                      &lt;<span>li>purposefulness&lt;<span>/li</span>&gt;
+                        &lt;<span>li>independence&lt;<span>/li</span>&gt;
+                          &lt;<span>li>logical thinking&lt;<span>/li</span>&gt;
+                            &lt;<span>li>sociability&lt;<span>/li</span>&gt;
+                              &lt;<span>/ul</span>&gt;
+                                &lt;<span>/section</span>&gt;
             </code>
           </pre>
     </section>
