--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
       </ul>
     </nav>
   </div>
-  <main>
-    <div class="sidebar">
+      <div class="sidebar">
       <img src="./assets/img/My_photo.jpg" class="my_photo" alt="My photo">
       <h1>Dzianis Perahudau</h1>
       <section id="contacts">
@@ -40,6 +39,7 @@
         </ul>
       </section>
     </div>
+    <main>
   <div class="content">
     <section class="section" id="about_me">
       <h2 class="section-title">About me:</h2>
@@ -78,15 +78,15 @@
       <code>
         &lt;<span>section class="section" id="personal_qualities"</span>&gt;&lt;<span>h2 class="section-title">Personal qualities:&lt;<span>/h2</span>&gt;
           &lt;<span>ul</span>&gt;
-            &lt;<span>li>readiness for constant self&lt;<span>/li</span>&gt;
-              &lt;<span>li>development&lt;<span>/li</span>&gt;
-                &lt;<span>li>ability to learn quickly&lt;<span>/li</span>&gt;
-                  &lt;<span>li>attentiveness&lt;<span>/li</span>&gt;
-                    &lt;<span>li>activity&lt;<span>/li</span>&gt;
-                      &lt;<span>li>purposefulness&lt;<span>/li</span>&gt;
-                        &lt;<span>li>independence&lt;<span>/li</span>&gt;
-                          &lt;<span>li>logical thinking&lt;<span>/li</span>&gt;
-                            &lt;<span>li>sociability&lt;<span>/li</span>&gt;
+            &lt;<span>li</span>&gt;readiness for constant self&lt;<span>/li</span>&gt;
+              &lt;<span>li</span>&gt;development&lt;<span>/li</span>&gt;
+                &lt;<span>li</span>&gt;ability to learn quickly&lt;<span>/li</span>&gt;
+                  &lt;<span>li</span>&gt;attentiveness&lt;<span>/li</span>&gt;
+                    &lt;<span>li</span>&gt;activity&lt;<span>/li</span>&gt;
+                      &lt;<span>li</span>&gt;purposefulness&lt;<span>/li</span>&gt;
+                        &lt;<span>li</span>&gt;independence&lt;<span>/li</span>&gt;
+                          &lt;<span>li</span>&gt;logical thinking&lt;<span>/li</span>&gt;
+                            &lt;<span>li</span>&gt;sociability&lt;<span>/li</span>&gt;
                               &lt;<span>/ul</span>&gt;
                                 &lt;<span>/section</span>&gt;
             </code>
