--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
                           &lt;<span>li</span>&gt;logical thinking&lt;<span>/li</span>&gt;
                             &lt;<span>li</span>&gt;sociability&lt;<span>/li</span>&gt;
                               &lt;<span>/ul</span>&gt;
-                                &lt;<span>/section</span>&gt;
-      </code>
-       </pre>
+                                &lt;<span>/section</span>&gt;</code>
+        </pre>
     </section>
     <section class="section" id="projects">
       <h2 class="section-title">Projects:</h2>
