docs: update index.html file with new information

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
                           &lt;<span>li</span>&gt;logical thinking&lt;<span>/li</span>&gt;
                             &lt;<span>li</span>&gt;sociability&lt;<span>/li</span>&gt;
                               &lt;<span>/ul</span>&gt;
-                                &lt;<span>/section</span>&gt;</code>
+                                &lt;<span>/section</span>&gt;
+                              </code>
+
         </pre>
     </section>
     <section class="section" id="projects">
