--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
     </section>
     <section class="section" id="code">
       <h2 class="section-title">Code example:</h2>
-      <pre>
-       <code>
+       <code pre>
         &lt;<span>section class="section" id="personal_qualities"</span>&gt;&lt;<span>h2 class="section-title">Personal qualities:&lt;<span>/h2</span>&gt;
         &lt;<span>ul</span>&gt;
         &lt;<span>li</span>&gt;readiness for constant self&lt;<span>/li</span>&gt;
@@ -90,7 +89,6 @@
         &lt;<span>/ul</span>&gt;
         &lt;<span>/section</span>&gt;
        </code>
-      </pre>
     </section>
     <section class="section" id="projects">
       <h2 class="section-title">Projects:</h2>
