docs: update index.html file with new information

--- a/index.html
+++ b/index.html
@@ -74,21 +74,23 @@
     </section>
     <section class="section" id="code">
       <h2 class="section-title">Code example:</h2>
-      <pre><code>
-        &lt;<span>section class="section" id="personal_qualities"</span>&gt;&lt;<span>h2 class="section-title">Personal qualities:&lt;<span>/h2</span>&gt;
-        &lt;<span>ul</span>&gt;
-        &lt;<span>li</span>&gt;readiness for constant self&lt;<span>/li</span>&gt;
-        &lt;<span>li</span>&gt;development&lt;<span>/li</span>&gt;
-        &lt;<span>li</span>&gt;ability to learn quickly&lt;<span>/li</span>&gt;
-        &lt;<span>li</span>&gt;attentiveness&lt;<span>/li</span>&gt;
-        &lt;<span>li</span>&gt;activity&lt;<span>/li</span>&gt;
-        &lt;<span>li</span>&gt;purposefulness&lt;<span>/li</span>&gt;
-        &lt;<span>li</span>&gt;independence&lt;<span>/li</span>&gt;
-        &lt;<span>li</span>&gt;logical thinking&lt;<span>/li</span>&gt;
-        &lt;<span>li</span>&gt;sociability&lt;<span>/li</span>&gt;
-        &lt;<span>/ul</span>&gt;
-        &lt;<span>/section</span>&gt;
-      </code></pre>
+      <pre>
+        <code>
+         &lt;<span>section class="section" id="personal_qualities"</span>&gt;&lt;<span>h2 class="section-title">Personal qualities:&lt;<span>/h2</span>&gt;
+         &lt;<span>ul</span>&gt;
+         &lt;<span>li</span>&gt;readiness for constant self&lt;<span>/li</span>&gt;
+         &lt;<span>li</span>&gt;development&lt;<span>/li</span>&gt;
+         &lt;<span>li</span>&gt;ability to learn quickly&lt;<span>/li</span>&gt;
+         &lt;<span>li</span>&gt;attentiveness&lt;<span>/li</span>&gt;
+         &lt;<span>li</span>&gt;activity&lt;<span>/li</span>&gt;
+         &lt;<span>li</span>&gt;purposefulness&lt;<span>/li</span>&gt;
+         &lt;<span>li</span>&gt;independence&lt;<span>/li</span>&gt;
+         &lt;<span>li</span>&gt;logical thinking&lt;<span>/li</span>&gt;
+         &lt;<span>li</span>&gt;sociability&lt;<span>/li</span>&gt;
+         &lt;<span>/ul</span>&gt;
+         &lt;<span>/section</span>&gt;
+        </code>
+      </pre>
     </section>
     <section class="section" id="projects">
       <h2 class="section-title">Projects:</h2>
