--- a/index.html
+++ b/index.html
@@ -76,19 +76,7 @@
       <h2 class="section-title">Code example:</h2>
       <pre>
         <code>
-         &lt;<span>section class="section" id="personal_qualities"</span>&gt;&lt;<span>h2 class="section-title">Personal qualities:&lt;<span>/h2</span>&gt;
-         &lt;<span>ul</span>&gt;
-         &lt;<span>li</span>&gt;readiness for constant self&lt;<span>/li</span>&gt;
-         &lt;<span>li</span>&gt;development&lt;<span>/li</span>&gt;
-         &lt;<span>li</span>&gt;ability to learn quickly&lt;<span>/li</span>&gt;
-         &lt;<span>li</span>&gt;attentiveness&lt;<span>/li</span>&gt;
-         &lt;<span>li</span>&gt;activity&lt;<span>/li</span>&gt;
-         &lt;<span>li</span>&gt;purposefulness&lt;<span>/li</span>&gt;
-         &lt;<span>li</span>&gt;independence&lt;<span>/li</span>&gt;
-         &lt;<span>li</span>&gt;logical thinking&lt;<span>/li</span>&gt;
-         &lt;<span>li</span>&gt;sociability&lt;<span>/li</span>&gt;
-         &lt;<span>/ul</span>&gt;
-         &lt;<span>/section</span>&gt;
+          console.log('Hello, World!');
         </code>
       </pre>
     </section>
